# multimodal-rag

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.prod  README.docker.md  docker-compose.yml  pyproject.toml  render.yaml
.kiro/specs/multimodal-rag/: .config.kiro  design.md  requirements.md  tasks.md
rag-frontend/: .dockerignore  .env.example  index.html  package-lock.json  package.json  vite.config.js
rag-frontend/src/: App.jsx  index.css
rag-frontend/src/components/: ChatWindow.jsx  CitationPanel.jsx  MessageBubble.jsx  OtpInput.jsx  QueryInput.jsx  Sidebar.jsx  StatusBadge.jsx  UploadPanel.jsx
rag-frontend/src/context/: AuthContext.jsx
rag-frontend/src/hooks/: useChat.js  useCollections.js
rag-frontend/src/pages/: LoginPage.jsx  ProfilePage.jsx
rag-frontend/src/services/: api.js
src/multimodal_rag_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rag/: __init__.py  config.py  exceptions.py  logging_config.py  models.py
src/rag/api/: __init__.py  dependencies.py  main.py
src/rag/api/routes/: auth.py  collections.py  health.py  ingest.py  query.py
src/rag/auth/: database.py  deps.py  email_service.py  google_service.py  models.py  otp_service.py  schemas.py  service.py
src/rag/embedding/: __init__.py  embedding_service.py  protocols.py
src/rag/frontend/: __init__.py  api_client.py  app.py
src/rag/generation/: __init__.py  llm_backends.py  protocols.py  response_generator.py
src/rag/ingestion/: __init__.py  chunker.py  pdf_parser.py  pipeline.py
src/rag/retrieval/: __init__.py  retriever.py
src/rag/storage/: __init__.py  vector_store.py
tests/: conftest.py  test_api.py  test_auth.py  test_chunker_properties.py  test_embedding_properties.py  test_embedding_service.py  test_frontend_api_client.py  test_generator_properties.py  test_google_auth.py  test_ingestion_pipeline.py  test_ingestion_properties.py  test_otp_auth.py  test_pdf_parser.py  test_response_generator.py  test_retriever.py  test_retriever_properties.py  test_vector_store.py  test_vector_store_properties.py
