[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-rag-system"
version = "0.1.0"
description = "A production-style Multimodal Retrieval-Augmented Generation platform"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "sentence-transformers==2.7.0",
    "chromadb==0.5.0",
    "pymupdf==1.24.3",
    "httpx==0.27.0",
    "streamlit==1.35.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.100.1",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]